<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background_200"
    tools:context=".Ui.UserFragment">

    <ImageButton
        android:id="@+id/camBtn"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="@+id/capturedImg"
        app:layout_constraintStart_toStartOf="@+id/capturedImg"
        app:layout_constraintTop_toBottomOf="@+id/capturedImg" />

    <ImageView
        android:id="@+id/capturedImg"
        android:layout_width="133dp"
        android:layout_height="148dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginBottom="72dp"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/exit"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/uplaod_from_gallary"
        app:layout_constraintEnd_toEndOf="@+id/camBtn"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/camBtn"
        app:layout_constraintTop_toBottomOf="@+id/camBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>