...
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descHosName" />

    <ImageView
        android:id="@+id/mapImage"
        android:layout_width="107dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_dialog_map"
        app:layout_constraintStart_toStartOf="parent"
...
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/userFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:src="@drawable/common_full_open_on_phone"
...
